Updated RelatorioService.java